--- a/CSS/moreFonts/index.html
+++ b/CSS/moreFonts/index.html
@@ -5,6 +5,7 @@
 
     <link href="style.css" type="text/css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto:100" type="text/css" rel="stylesheet" >
+  <link href="https://fonts.googleapis.com/css?family=Playfair+Display">
 </head>
 <body>
 
